# Gauss

./: .gitignore  CMakeLists.txt  README.md  gauss.h
src/: dllexport.h  gauss.cpp  gauss.h
